fix scrollbar overlay and header fixed

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     font-size: 1.6rem;
     min-width: 100px;
-    padding: 8px 16px;
+    padding: 8px 14px;
     border-radius: 4px;
     font-weight: 700;
     cursor: pointer;
