--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -45,6 +45,7 @@ body{
     text-rendering: optimizeSpeed;
     color: var(--text-color);
     background-color: var(--content-bg);
+    overflow-y: overlay;
 }
 
 a[href]{
@@ -78,7 +79,7 @@ html *::-webkit-scrollbar {
 
 html ::-webkit-scrollbar-thumb {
     border-radius: 4px;
-    background-color: rgba(22, 24, 35, 0.06);
+    background-color: var(--thumb-bg);
 }
 
 html ::-webkit-scrollbar-track {
