--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     min-height: 1000px;
     background-color: #ccc;
+    margin-top: 60px;
 }
 
 .content{
