--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .wrapper{
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
     width: 100%;
     height: var(--default-header-height);
     padding-left: 15px;
